--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
@@ -13,13 +14,15 @@
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
+    "pdfkit": "^0.15.0",
+    "pdfmake": "^0.2.10",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0"
   },
   "scripts": {
     "start": "node server.js",
     "swagger": "node swagger.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon pdf.js"
   },
   "name": "voosh_task",
   "version": "1.0.0",
